CSS styles fixed on mobile and tablet

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -29,44 +29,64 @@
 .container{
     display:flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     padding-top:30%;
     width:300px;
 }
-
+.iconAndTitleCont{
+   display:flex;
+   flex-direction: row;
+   align-items:center ; 
+}
 .iconContainer{
+    display: flex;
     background-color: rgba(var(--color-green-positive), .8); ;
-    height:40px;
-    width:20%;
+    width: 30px; 
+    height:30px;
+    padding: 0px 0px 0px 0px;
+    align-items: center;
+    justify-content: center;
 }
-.iconContainer .icon{
-   padding-top: 25%;
-   padding-left: 25%;
-   width:55%;
+.icon{
+   height:16px;
+   width:16px;
 }
-.texts{
+/* .texts{
     padding-top: 0px;
-}
-.pollTitle,.question,.pubDate,.labelVoteNow{
+} */
+.pollTitle,.description,.pubDate,.labelVoteNow{
     color:var(--color-white)
 }
 .pollTitle{
+    display:flex;
+    flex-wrap: wrap-reverse;
     font-size: 2.5em;
     font-weight: 400;
+    height: 30px;
     margin:0;
+    margin-left: 5px;
     padding:0;
+    width: 90%;
 }
-.question{
-    margin: 5px 0 0 10px;
-    font-size: 1.3rem;
-    text-align:left;
+.description {
+    display: flex;
+    margin-left: 45px;
+    margin-right: 10px;
+    font-size: 1em;
     font-weight: 350;
+    flex-basis: 90%;
+    font-size: 14px;
+    overflow: hidden;
+    height: 36px;
+    text-overflow: ellipsis;
 }
+
 .pubDate{
     text-align: right;
     margin-top: 5px;
     margin-right:2em;
     font-size: 1rem;
+    
 }
 .thumbsContainer{
     display: flex;
@@ -147,8 +167,8 @@
     color:var(--color-white)
 }
 
-@media (min-width:768px){
+/* @media (min-width:768px){
     .card{
 
 
-}}
+}} */
